# CMake_training

./: LICENSE  README.md
第03章 基础语法/3.02 注释/: 单行注释.cmake  括号注释.cmake
第03章 基础语法/3.06 列表/: print_list.cmake
第03章 基础语法/3.07 控制结构/: 区间遍历.cmake  简单列表遍历.cmake
第03章 基础语法/3.08 条件语法/: 奇怪的变量.cmake
第03章 基础语法/3.09 命令定义/: 宏与函数参数的区别.cmake  解析结果命令前缀.cmake
第04章 常用命令/4.01  数值操作命令：math/: math.cmake
第04章 常用命令/4.02 字符串操作命令：string/4.02.01 搜索和替换/: 搜索GBK字符串.cmake
第04章 常用命令/4.02 字符串操作命令：string/4.02.02 正则匹配和替换/: 单次正则匹配.cmake  捕获组.cmake  正则替换.cmake
第04章 常用命令/4.02 字符串操作命令：string/4.02.03 取字符串长度/: 取字符串长度.cmake
第04章 常用命令/4.02 字符串操作命令：string/4.02.06 取哈希值/: 哈希.cmake
第04章 常用命令/4.03 列表操作命令：list/4.03.02 访问列表元素/: 搜索列表元素.cmake
第04章 常用命令/4.04 文件操作命令：file/4.04.01 读取文件/: 获取修改时间.cmake
第04章 常用命令/4.04 文件操作命令：file/4.04.02 获取运行时依赖/: CMakeLists.txt  a.c  liba.h  main.c  获取运行时依赖.cmake
第04章 常用命令/4.04 文件操作命令：file/4.04.04 模板文件/: 模板文件.cmake
第04章 常用命令/4.04 文件操作命令：file/4.04.05 遍历路径/: 遍历路径.cmake
第04章 常用命令/4.04 文件操作命令：file/4.04.07 删除文件或目录/: 删除文件.cmake  递归删除文件.cmake
第04章 常用命令/4.04 文件操作命令：file/4.04.09 复制文件或目录/: LINK_TEMP_FILE  link_temp.txt  创建链接.cmake  解析符号链接.cmake  设置权限.cmake  递归设置权限.cmake
第04章 常用命令/4.04 文件操作命令：file/4.04.10 文件传输/: 文件下载.cmake
第04章 常用命令/4.04 文件操作命令：file/4.04.12 归档压缩/提取归档文件/: 归档.7z
第04章 常用命令/4.04 文件操作命令：file/4.04.14 路径转换/: 计算相对路径.cmake  计算绝对路径.cmake  转为CMake路径.cmake  转为原生路径.cmake
第04章 常用命令/4.05 路径操作命令：cmake_path/4.05.02 创建路径变量/: 路径赋值.cmake
第04章 常用命令/4.05 路径操作命令：cmake_path/4.05.04 路径判别/: 判别路径前缀.cmake
第04章 常用命令/4.05 路径操作命令：cmake_path/4.05.05 比较路径/: 比较路径.cmake
第04章 常用命令/4.05 路径操作命令：cmake_path/4.05.07 路径转换/: 计算相对路径.cmake  计算绝对路径.cmake  计算路径哈希.cmake
第04章 常用命令/4.06 路径操作命令：get_filename_component/: 解析命令行.cmake
第06章 CMake构建初探/6.01 CMake项目的生命周期/6.01.01 配置阶段和生成阶段/: generators_list.txt
第06章 CMake构建初探/6.01 CMake项目的生命周期/6.01.02 常用构建系统生成器/: CMakeLists.txt
第06章 CMake构建初探/6.01 CMake项目的生命周期/6.01.03 安装阶段和打包阶段/: lib.c
第06章 CMake构建初探/6.04 使用Visual Studio打开CMake项目/: CMakeLists.txt  README.txt
(+31 files in other folders)
